Se devuelve total count de una consulta
