# utils/response/resultsSender.js
@@ -1,8 +1,9 @@
 const express = require('express')
 
-function sendResult(res, obj){
+function sendResult(res, obj, totalCount){
   res.status(200).json({
     count: obj.length,
+    totalCount: totalCount,
     results: obj
   })
 }
